Repositories and Factory

--- a/FlooringMastery/FlooringMastery.Data/FlooringMastery.Data.csproj
+++ b/FlooringMastery/FlooringMastery.Data/FlooringMastery.Data.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,9 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataFactory.cs" />
-    <Compile Include="OrderRepository.cs" />
+    <Compile Include="DataRepositories\DataFactory.cs" />
+    <Compile Include="DataRepositories\ProdRepository.cs" />
+    <Compile Include="DataRepositories\TestRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FlooringMastery.Models\FlooringMastery.Models.csproj">
+      <Project>{14aec49c-146a-441a-9eea-4d024b9fcf5e}</Project>
+      <Name>FlooringMastery.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
