--- a/FlooringMastery/FlooringMastery.UI/FlooringMastery.UI.csproj
+++ b/FlooringMastery/FlooringMastery.UI/FlooringMastery.UI.csproj
@@ -50,6 +50,20 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="DataFiles\Prod.txt" />
+    <Content Include="DataFiles\Test.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FlooringMastery.Data\FlooringMastery.Data.csproj">
+      <Project>{e4f8c8e1-ba0f-4e86-ba15-be9529daa675}</Project>
+      <Name>FlooringMastery.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FlooringMastery.Models\FlooringMastery.Models.csproj">
+      <Project>{14aec49c-146a-441a-9eea-4d024b9fcf5e}</Project>
+      <Name>FlooringMastery.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
