--- a/FlooringMastery/FlooringMastery.UI/App.config
+++ b/FlooringMastery/FlooringMastery.UI/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
-    <add key ="Test" value="Test"/>
+    <add key ="Test" value="Test.txt"/>
     <add key ="Prod" value="Prod"/>
   </appSettings>
 </configuration>
