added test repository methods to check for date and pull up allorders within that date

--- a/FlooringMastery/FlooringMastery.Data/FlooringMastery.Data.csproj
+++ b/FlooringMastery/FlooringMastery.Data/FlooringMastery.Data.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataRepositories\DataFactory.cs" />
+    <Compile Include="DataRepositories\OrderRepository.cs" />
     <Compile Include="DataRepositories\ProdRepository.cs" />
     <Compile Include="DataRepositories\TestDataRepository.cs" />
     <Compile Include="DataRepositories\TestRepository.cs" />
