--- a/FlooringMastery/FlooringMastery.UI/FlooringMastery.UI.csproj
+++ b/FlooringMastery/FlooringMastery.UI/FlooringMastery.UI.csproj
@@ -46,13 +46,18 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Workflows\AddOrderWorkflow.cs" />
+    <Compile Include="Workflows\DisplayOrderWorkflow.cs" />
+    <Compile Include="Workflows\EditOrderWorkflow.cs" />
+    <Compile Include="Workflows\MainMenu.cs" />
+    <Compile Include="Workflows\RemoveOrderWorkflow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="DataFiles\Prod.txt" />
-    <Content Include="DataFiles\Test.txt">
+    <Content Include="DataFiles\ProdFiles\Orders_06012013.txt" />
+    <Content Include="DataFiles\TestFiles\Orders_06012013.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
