--- a/FlooringMastery/FlooringMastery.Models/FlooringMastery.Models.csproj
+++ b/FlooringMastery/FlooringMastery.Models/FlooringMastery.Models.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ErrorLog.cs" />
     <Compile Include="IDataRepository.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Product.cs" />
